--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,22 +1,31 @@
-.div-cont {
+.div-cont-login {
   display: flex;
   flex-direction: row;
   justify-content: center !important;
+  height: 350px;
+  gap: 50px;
 }
-.title{
-  width: 500px; 
+.title {
+  width: 500px;
 }
 
-.btn{
+.btn {
   display: flex;
   flex-direction: column;
   justify-content: center !important;
 }
 
-.enter{
+.enter {
   margin: auto;
+  background-color: #86b7fe;
+  border-color: #86b7fe;
 }
-.text{
+.enter:hover {
+  margin: auto;
+  background-color: #86b7fe;
+  border-color: #86b7fe;
+}
+.text {
   text-decoration: underline;
   color: rgb(75, 149, 235);
 }
