--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,900&display=swap");
+
+.font {
+  font-family: poppins;
+  font-weight: 500;
+}
+.font-size {
+  font-size: 13px;
+}
 .img-profile {
   width: 150px;
 }
@@ -18,6 +27,7 @@
   height: 13px;
   background-color: rgb(7, 182, 1);
   border-radius: 50px;
+  border: 1px solid rgba(61, 61, 61, 0.514);
 }
 .width-ol {
   width: 120px;
