--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,15 +1,29 @@
 .container-fluid {
   background-color: #86b7fe;
-
 }
 
 .div-cont {
   display: flex !important ;
   flex-direction: row;
-  justify-content:center !important ;
+  justify-content: center !important ;
 }
 
 .logo {
   width: 80px !important;
   height: 75px !important;
+}
+.logout {
+  width: 40px;
+  height: 40px;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.div-load {
+  position: relative;
+  left: -50px;
+  width: 50px;
+  height: 50px;
 }
