--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -1,4 +1,24 @@
-.main{
-    display: flex;
-    
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,900&display=swap");
+
+.main {
+  display: flex;
+}
+.height {
+  min-height: 600px;
+}
+
+.fonts {
+  font-family: poppins;
+  font-size: 18px;
+  font-weight: 400;
+}
+.fonts-2 {
+  font-family: poppins;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.sizes {
+  width: 250px;
+  height: 230px;
 }
