--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -4,6 +4,9 @@
   font-family: poppins;
   font-weight: 500;
 }
+.ft {
+  font-size: 13px;
+}
 .title-table {
   font-family: poppins;
   font-weight: 500;
@@ -136,3 +139,20 @@
 }
 
 /* end spl tbl */
+
+@media only screen and (max-width: 600px) {
+  .nonez {
+    display: none;
+  }
+  .ft {
+    font-size: 13px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .gaps {
+    gap: 10px !important;
+  }
+  .ft {
+    font-size: 13px;
+  }
+}
